# CAT_25_CanSat

./: .gitignore  .nfs000000000007815800000001
include/: comm.cpp  comm.hpp
rp2040_main/: CMakeLists.txt  README.md
rp2040_main/include/: LoRa-RP2040.cpp  LoRa-RP2040.h  comm.cpp  comm.hpp
rp2040_main/src/: idk.cpp  rp2040_main.cpp
src/: receiver.cpp
src/ground_station/: lora_receiver.ino  usb_receiver.cpp
src/rp2040_main/: example.cpp
